primitive population generated